--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.1",
     "react-image-zoom": "^1.3.1",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
